<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BaseLibrary</string>

    <string name="anim_name">我是%s</string>

    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="attach_file" tools:keep="@string/attach_file">File</string>
    <string name="icon_member_pay_type_right">\ue9e4</string>
    <string name="bottom_navigation_item_homepage">首页</string>
    <string name="bottom_navigation_item_we">微淘</string>
    <string name="bottom_navigation_item_question">问大家</string>
    <string name="bottom_navigation_item_cart">购物车</string>
    <string name="bottom_navigation_item_personal">我的淘宝</string>
    <string name="in_shop_shopping">到店购物</string>
    <string name="presalesku_presale_num">已售%s份</string>
    <string name="home_first">头条</string>
    <string name="text_rise">起</string>
    <string name="icon_pickself">"\ue9a6"</string>
    <string name="icon_plus">"\ue979"</string>
    <string name="icon_xiao_hui_wallet">"\ue9a7"</string>
    <string name="format_yuan_string_common">¥%s</string>
    <string name="str_price_exception">未获取到价格</string>
    <string name="icon_city_location">"\ue908"</string>
    <string name="home_tmall">天猫</string>
    <string name="home_suan">聚划算</string>
    <string name="home_global">天猫国际</string>
    <string name="home_wai">外卖</string>
    <string name="home_market">天猫超市</string>
    <string name="home_charge">充值中心</string>
    <string name="home_pig">飞猪旅行</string>
    <string name="home_gold">领金币</string>
    <string name="home_family">到家</string>
    <string name="home_category">分类</string>
    <string name="text_protocol">感谢您对我们的支持和信赖！我们时刻重点关注您的个人信息保护，为了更好的保障您的个人权益，在您使用我们的产品前，请务必审慎阅读《用户注册条款》和《隐私保护政策》内的所有条款，同意并接受全部的条款后即可开始使用我们的产品和服务。</string>
    <string name="libActivityFrom">来自：</string>
    <string name="libActivityOutStack"> 出栈</string>
    <string name="libActivityInStack"> 入栈</string>
    <string name="libFragmentShow"> 展示</string>
    <string name="libFragmentClose"> 关闭</string>
    <string name="libQuit">app 退出</string>


    <string-array name="item_category_names">
        <item>背景布局、TextView、Button等</item>
        <item>text文本</item>
        <item>半透明引导层</item>
        <item>快速查询索引</item>
        <item>RecyclerView</item>
        <item>Log日志</item>
        <item>应用升级</item>
        <item>弹窗</item>
        <item>进度条</item>
        <item>录制语音</item>
        <item>二维码</item>
        <item>自定义控件</item>
        <item>外部资源加载框架</item>
        <item>热修复</item>
        <item>Lottie动画</item>
        <item>高斯模糊背景</item>
        <item>3D卡片叠放</item>
        <item>WebView和H5互调</item>
        <item>WebView优化</item>
        <item>RecyclerView横向查看更多</item>
        <item>ARouter使用</item>
        <item>全局弹窗优惠券的富文本展示</item>
        <item>字体库使用</item>
        <item>Activity进入动画</item>
        <item>布局优化</item>
        <item>Fragment</item>
        <item>ConstraintLayout修改约束</item>
        <item>横向滚动图标+指示器</item>
        <item>时间倒计时</item>
        <item>文字富文本+shape背景实现</item>
        <item>Fragment中layout_behavior实现滑动</item>
        <item>自动轮播</item>
    </string-array>
    <string name="icon_back_left">"\ue942"</string>
    <string name="icon_more">"\ue9d0"</string>
    <string name="member_bury_page_mine">>我的页</string>

    <string name="member_bury_nor_member_tag">~普通会员标签</string>
    <string name="member_bury_sss_member_tag">~卓越会员标签</string>
    <string name="member_bury_super_member_tag">~超级会员标签</string>
    <string name="member_bury_coupon_tips">~我的优惠券提醒</string>
    <string name="member_bury_qrcode">~我的顶部会员码</string>
    <string name="member_bury_custom_service">~我的顶部客服</string>
    <string name="member_bury_complete_info">~完善会员信息</string>

    <string name="member_bury_customer_properties">>customerProperties</string>
    <string name="member_bury_order_topay">>待支付</string>
    <string name="member_bury_order_topick">>待收货</string>
    <string name="member_bury_order_tocomment">>待评价</string>
    <string name="member_bury_order_refund">>退款售后</string>
    <string name="member_bury_order_all">>全部订单</string>
    <string name="order_detail_pay">待支付</string>
    <string name="member_bury_service">>服务帮助</string>
    <string name="member_bury_yhjr">>永辉钱包</string>
    <string name="member_bury_login">>立即登录</string>
    <string name="member_bury_my_store">>我的门店</string>
    <string name="member_refund">退款/售后</string>
    <string name="member_bury_svip_card">>超级会员入口</string>
    <string name="member_please_login">登录/注册</string>
    <string name="member_center">我的</string>
    <string name="vip_type_normal">会员</string>
    <string name="vip_type_super">超级会员</string>
    <string name="order_list_all">全部订单</string>
    <string name="member_need_comment">待评价</string>
    <string name="member_need_receive">待收货</string>
    <string name="default_pic_content_description">图片</string>
    <string name="member_center_discount_hint">领取优惠</string>
    <string name="icon_location">"\ue909"</string>
    <string name="icon_arrow_right">"\ue92a"</string>
    <string name="membercenter_service_center">客服中心</string>
    <string name="CustomerServicePhone">4008005050</string>
    <string name="list_mode_list">点我切换模式-列表模式</string>
    <string name="list_mode_stagger">点我切换模式-图片模式</string>
    <string name="list_menu">菜单栏todo</string>
    <string name="loading">加载中...</string>
    <string name="but_ited">编辑</string>
    <string name="tex_search">请输入搜索的商品</string>
    <string name="tex_login">点击登录</string>
    <string name="home_new_customer_coupon_dialog_amount">总价值：%s元</string>
    <string name="format_yuan_string">¥%s</string>
    <string name="colon">:</string>
</resources>
